--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
   shutdown: graceful
 eureka:
   client:
-    register-with-eureka: false
+    register-with-eureka: true
     fetch-registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${EUREKA_SERVER_PORT}/eureka/
@@ -14,8 +14,10 @@ spring:
   rabbitmq:
     host: ${MQ_SERVER_ADDRESS}
     port: ${MQ_SERVER_PORT}
-    username: ${MQ_SERVER_USER_NAME}
+    username: ${MQ_SERVER_USERNAME}
     password: ${MQ_SERVER_PASSWORD}
+    ssl:
+      enabled: true
   application.name: config-server
   cloud:
     config:
